load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")


# Bazel Target to Compile Pip Requirements.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = [
        "local_spawn"
    ],
)


# Bazel Target to Format Python Files.
py_console_script_binary(
    name = "black",
    pkg = "@pyetrade_pypi//black",
)

genrule(
    name = "format_python",
    srcs = glob([
        "app/**/*.py",
    ]),
    outs = ["black.out.txt"],
    cmd = """
        $(location :black) -l 79 $(SRCS) > $(@) || echo "Black formatting failed" > $(@)
    """,
    tools = [":black"],
    tags = [
        "local_spawn"
    ],
)


# Bazel Target to Generate the Packages Below.
# Packages:
#   - bdist_wheel
#   - sdist
